"NUMBER" process-val, for ints, fixed. ECOG and KPS now recorded as NUMBER types.

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -13,14 +13,19 @@
     "# study_identifier = 'brain_abc'  #used for copying brain_abc_custom_caisis_prep.py to this folder as custom_caisis_prep.py.\n",
     "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
-    "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   \n",
-    "diseaseChosen = 'Sarcoma'  #'Brain'\n",
-    "study_identifier = 'sarcoma_caisis'  \n",
+    "# dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   \n",
+    "# diseaseChosen = 'Sarcoma'  #'Brain'\n",
+    "# study_identifier = 'sarcoma_caisis'  \n",
+    "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
+    "\n",
+    "dataset_folder = '../Caisis_NonPublicData/Liver_nov2021'   \n",
+    "diseaseChosen = 'Liver Cancer'   \n",
+    "study_identifier = 'liver_caisis' \n",
     "type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
-    "# dataset_folder = '../Caisis_NonPublicData/Liver_nov2021'   \n",
-    "# diseaseChosen = 'Liver Cancer'   \n",
-    "# study_identifier = 'liver_caisis' \n",
+    "# dataset_folder = '../Caisis_NonPublicData/Pancreas_nov2021'   \n",
+    "# diseaseChosen = 'Pancreas Cancer'  #'Brain'\n",
+    "# study_identifier = 'pancreas_caisis'  \n",
     "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
     "\n"
@@ -282,14 +287,19 @@
    "outputs": [],
    "source": [
     "def process_val(val, ifield:ImportField):\n",
-    "    if ifield.type=='NUMBER':\n",
-    "        val = val # convert to number\n",
-    "        if math.isnan(val):\n",
-    "            print(\"nan found\")\n",
-    "            val = \"\"\n",
-    "        if str(val)==\"nan\":\n",
-    "            print(\"nan text found\")\n",
-    "            val = \"\"            \n",
+    "    # print(\"enter process_val, name=\"+ifield.source_name+\",type=\"+ifield.type+\"!\")\n",
+    "    if ifield.type=='NUMBER':  # for now, this means just integers\n",
+    "        print(str(val))\n",
+    "        try:\n",
+    "            val = int(val)\n",
+    "            if math.isnan(val):\n",
+    "                print(\"nan found\")\n",
+    "                val = \"\"\n",
+    "            if str(val)==\"nan\":\n",
+    "                print(\"nan text found\")\n",
+    "                val = \"\"   \n",
+    "        except:\n",
+    "            val =\"\"\n",
     "    if ifield.type=='DATE':\n",
     "        # print(str(ifield.type)+\", val-type=\" + str(type(val)) + \" val=(\"+str(val)+\")\")\n",
     "        if isinstance(val, str):\n",
@@ -300,6 +310,7 @@
     "            val=\"\" # TBD: error reporting\n",
     "            print(\"WARN: expected string for date in \" +ifield.source_name+\", but isn't a string.\")\n",
     "    try:\n",
+    "        #print(\"process_val about to return \"+str(val))\n",
     "        return val\n",
     "    except:\n",
     "        noval_list.append(pid)\n",
@@ -444,24 +455,39 @@
     "                process_val(start_date, core_timeline_fields[1]), \n",
     "                process_val(stop_date, core_timeline_fields[2]), \n",
     "                ]\n",
+    "\n",
+    "            print(\"columns....\")\n",
+    "            print(*current_table.columns, sep = \", \") \n",
+    "            print(\"done 123\")\n",
+    "            if \"EncECOG_Score\" in current_table.columns:\n",
+    "                print('YES, ECOG is there.')\n",
+    "            else:\n",
+    "                print(\"NO, ECOG is NOT there.\")\n",
+    "\n",
     "            # now append all import fields\n",
     "            for ifield in import_fields:\n",
     "                if ifield.source_name in current_table.columns:\n",
     "                    fieldval = row[ifield.source_name]\n",
-    "                    #  print('source_name='+ifield.source_name+',  fieldval = ' + str(fieldval))\n",
+    "                    if ifield.source_name == \"EncECOG_Score\":\n",
+    "                        print(\"===EncECOG_Score Seen!===\")\n",
+    "                        print('if source_name='+ifield.source_name+',  fieldval = ' + str(fieldval))\n",
     "                    # process raw value\n",
     "                    val = None\n",
     "                    try:\n",
     "                        val = process_val(fieldval, ifield)\n",
+    "                        if ifield.source_name == \"EncECOG_Score\":\n",
+    "                            print('try source_name='+ifield.source_name+',  process_val = ' + str(fieldval))\n",
     "\n",
     "                    except:\n",
-    "                        print(\"ERROR \"+current_lookup_field+\", \"+str(pid)+\"   \"+str(val)+\".\")\n",
+    "                        print(\"ERROR fiif  \"+current_lookup_field+\", \"+str(pid)+\"   \"+str(val)+\".\")\n",
     "                        typef, value, traceback = sys.exc_info()\n",
     "                        print('Error value '+ str (value))\n",
     "                        pass\n",
     "\n",
     "                    new_row.append(val)\n",
-    "            \n",
+    "            print(\"new_row....\")\n",
+    "            print(*new_row, sep = \", \")\n",
+    "\n",
     "            if subtype_source is not None:\n",
     "                # print('wwww subtype_source is...')\n",
     "                # print(subtype_source)\n",
@@ -551,8 +577,6 @@
     "                def get_field_value(pid):\n",
     "                    global current_lookup_field, noval_list, global_gg\n",
     "\n",
-    "\n",
-    "                    print('done truth test.')\n",
     "                    gg = current_table.loc[ (current_table['PatientId'] == str(pid)) & (current_table[dataval_field] == str(matching_val))  ]\n",
     "                    last_alive_str = gg[dateval_field].values[-1]  # <-- TBD: SHould actually loop through dates trings for last date. We *might* get an out of order Alive statement, so don't assume last in list is always the latest.\n",
     "                    val = None\n",
@@ -640,8 +664,8 @@
     "\n",
     "    print(\"\\nSTEP 4: Import to events tables.\")\n",
     "    import_fields = [\n",
-    "        ImportField('EncECOG', final_name='ECOG', type='NUMBER') ,   #, conversion_function=None),\n",
-    "        ImportField('EncKPS', final_name='KPS') ,   #, conversion_function=None),\n",
+    "        ImportField('EncECOG_Score', final_name='ECOG', type='NUMBER') ,   #, conversion_function=None),\n",
+    "        ImportField('EncKPS', final_name='KPS', type='NUMBER') ,   #, conversion_function=None),\n",
     "    ]\n",
     "    import_to_event_table('timeline-encounters', 'Encounters', import_fields, event_type='ENCOUNTERS', start_date_col_name='EncDate', stop_date_col_name='EncDate', graph_marker=graph_marker_types[\"diamonds\"] )\n",
     "    datafiles_fields['timeline-encounters'] = core_timeline_fields.copy()\n",
