Added load of PtDeathDate->DeathDate

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -8,20 +8,20 @@
    "source": [
     "# CaisisImport. A utility to prepare a Caisis-to-Excel export for import into Oncoscape (via cBioPortal format).\n",
     "\n",
-    "# dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
-    "# diseaseChosen = 'Brain'  \n",
-    "# study_identifier = 'brain_abc'  #used for copying brain_abc_custom_caisis_prep.py to this folder as custom_caisis_prep.py.\n",
-    "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
+    "dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
+    "diseaseChosen = 'Brain'  \n",
+    "study_identifier = 'brain_abc'  #used for copying brain_abc_custom_caisis_prep.py to this folder as custom_caisis_prep.py.\n",
+    "type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
     "# dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   \n",
     "# diseaseChosen = 'Sarcoma'  #'Brain'\n",
     "# study_identifier = 'sarcoma_caisis'  \n",
     "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
-    "dataset_folder = '../Caisis_NonPublicData/Liver_nov2021'   \n",
-    "diseaseChosen = 'Liver Cancer'   \n",
-    "study_identifier = 'liver_caisis' \n",
-    "type_of_cancer = \"misc\"  # Use cbioportal term\n",
+    "# dataset_folder = '../Caisis_NonPublicData/Liver_nov2021'   \n",
+    "# diseaseChosen = 'Liver Cancer'   \n",
+    "# study_identifier = 'liver_caisis' \n",
+    "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
     "# dataset_folder = '../Caisis_NonPublicData/Pancreas_nov2021'   \n",
     "# diseaseChosen = 'Pancreas Cancer'  #'Brain'\n",
@@ -624,7 +624,8 @@
     "\n",
     "    import_fields = [\n",
     "       ImportField('PtGender', final_name='Sex') ,   #, conversion_function=None),\n",
-    "       ImportField('PtBirthDate', final_name='BirthDate', type=\"DATE\" )\n",
+    "       ImportField('PtBirthDate', final_name='BirthDate', type=\"DATE\" ),\n",
+    "       ImportField('PtDeathDate', final_name='DeathDate', type=\"DATE\" )\n",
     "    ]\n",
     "    import_to_patient_table('Demographics', import_fields)\n",
     "    datafiles_fields['patient'].extend(import_fields)\n",
