--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -286,10 +286,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "global_date_errors=[]\n",
+    "\n",
     "def process_val(val, ifield:ImportField):\n",
+    "    global global_date_errors\n",
     "    # print(\"enter process_val, name=\"+ifield.source_name+\",type=\"+ifield.type+\"!\")\n",
     "    if ifield.type=='NUMBER':  # for now, this means just integers\n",
-    "        print(str(val))\n",
+    "        # print(str(val))\n",
     "        try:\n",
     "            val = int(val)\n",
     "            if math.isnan(val):\n",
@@ -308,7 +311,7 @@
     "                val = \"\"\n",
     "        else:\n",
     "            val=\"\" # TBD: error reporting\n",
-    "            print(\"WARN: expected string for date in \" +ifield.source_name+\", but isn't a string.\")\n",
+    "            global_date_errors.append(\"Expected string for date in \" +ifield.source_name+\", but isn't a string.\")\n",
     "    try:\n",
     "        #print(\"process_val about to return \"+str(val))\n",
     "        return val\n",
@@ -319,11 +322,12 @@
     "\n",
     "# imports: a dictionary of column name from the tname table into patient table, where value is a function to convert data\n",
     "def import_to_patient_table(tname, import_fields:List[ImportField]): \n",
-    "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list\n",
+    "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list, global_date_errors\n",
     "    if (tname in loaded_tables_dict) == False:\n",
     "        print(\"WARN -- Could not process table \"+tname)\n",
     "    else:\n",
     "        current_table = loaded_tables_dict[tname]\n",
+    "        global_date_errors = []\n",
     "        for ifield in import_fields:\n",
     "\n",
     "            if ifield.source_name in current_table.columns:\n",
@@ -359,7 +363,9 @@
     "                data_clinical_patient[ifield.final_name] = new_values\n",
     "                #print(data_clinical_patient.head(12))\n",
     "            else:\n",
-    "                print(\"==== ERROR: Three is no column '\"+ifield.source_name+\"' in '\"+tname+\"' table. ====\")"
+    "                print(\"==== ERROR: Three is no column '\"+ifield.source_name+\"' in '\"+tname+\"' table. ====\")\n",
+    "        if len(global_date_errors) > 0:\n",
+    "            print(\"WARN: Table \"+ tname + \" has \" + str(len(global_date_errors))+  \"date errors.\" )"
    ]
   },
   {
@@ -427,6 +433,7 @@
     "        print('For ' + event_type+\", rewrite keys:\")\n",
     "        print(str(these_subtype_rewrites))\n",
     "        print('>>>end')\n",
+    "\n",
     "        # Loop through rows in current_table.\n",
     "        # Pull out each field from import_fields, and add event type, and start and stop dates.\n",
     "        current_table_rows_of_dict = current_table.to_dict('records')\n",
@@ -456,27 +463,30 @@
     "                process_val(stop_date, core_timeline_fields[2]), \n",
     "                ]\n",
     "\n",
-    "            print(\"columns....\")\n",
-    "            print(*current_table.columns, sep = \", \") \n",
-    "            print(\"done 123\")\n",
+    "            # print(\"columns....\")\n",
+    "            # print(*current_table.columns, sep = \", \") \n",
     "            if \"EncECOG_Score\" in current_table.columns:\n",
-    "                print('YES, ECOG is there.')\n",
+    "                # print('YES, ECOG is there.')\n",
+    "                pass\n",
     "            else:\n",
-    "                print(\"NO, ECOG is NOT there.\")\n",
+    "                # print(\"NO, ECOG is NOT there.\")\n",
+    "                pass\n",
     "\n",
     "            # now append all import fields\n",
     "            for ifield in import_fields:\n",
     "                if ifield.source_name in current_table.columns:\n",
     "                    fieldval = row[ifield.source_name]\n",
     "                    if ifield.source_name == \"EncECOG_Score\":\n",
-    "                        print(\"===EncECOG_Score Seen!===\")\n",
-    "                        print('if source_name='+ifield.source_name+',  fieldval = ' + str(fieldval))\n",
+    "                        # print(\"===EncECOG_Score Seen!===\")\n",
+    "                        # print('if source_name='+ifield.source_name+',  fieldval = ' + str(fieldval))\n",
+    "                        pass\n",
     "                    # process raw value\n",
     "                    val = None\n",
     "                    try:\n",
     "                        val = process_val(fieldval, ifield)\n",
     "                        if ifield.source_name == \"EncECOG_Score\":\n",
-    "                            print('try source_name='+ifield.source_name+',  process_val = ' + str(fieldval))\n",
+    "                            # print('try source_name='+ifield.source_name+',  process_val = ' + str(fieldval))\n",
+    "                            pass\n",
     "\n",
     "                    except:\n",
     "                        print(\"ERROR fiif  \"+current_lookup_field+\", \"+str(pid)+\"   \"+str(val)+\".\")\n",
@@ -485,8 +495,8 @@
     "                        pass\n",
     "\n",
     "                    new_row.append(val)\n",
-    "            print(\"new_row....\")\n",
-    "            print(*new_row, sep = \", \")\n",
+    "            # print(\"new_row....\")\n",
+    "            # print(*new_row, sep = \", \")\n",
     "\n",
     "            if subtype_source is not None:\n",
     "                # print('wwww subtype_source is...')\n",
@@ -517,9 +527,6 @@
     "                    if grouping_match_found == False:\n",
     "                        val = \"Other \" + event_type\n",
     "\n",
-    "                if val == \"-1234\":\n",
-    "                    print(\"=====1234====\")\n",
-    "\n",
     "                if (val.strip() == \"\") or (val.lower()==\"nan\"):\n",
     "                    val = \"MISSING\" # TBD: add reporting of error.\n",
     "                    print(\"WARNING: missing subtype value.\")\n",
@@ -532,7 +539,6 @@
     "        # new_values = data_clinical_patient['PatientId'].apply(get_field_value)\n",
     "        # data_clinical_patient[ifield.final_name] = new_values\n",
     "        # print(data_clinical_patient.head(12))\n",
-    "\n",
     "\n",
     "        print('column_names....')\n",
     "        print(type(column_names))\n",
@@ -660,7 +666,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def create_fields_list(import_fields, df):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_fields(name, import_fields):\n",
+    "    global core_timeline_fields, datafiles_fields\n",
+    "    datafiles_fields[name] = core_timeline_fields.copy()\n",
+    "    datafiles_fields[name].extend(import_fields)\n",
+    "    print('add_fields success, '+name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def import_fields_to_event_tables():\n",
+    "    global core_timeline_fields, datafiles_fields\n",
+    "\n",
     "    # This is the core of specifying which fields we want to import. May change between datasets, so consider moving to an external file.\n",
     "\n",
     "    print(\"\\nSTEP 4: Import to events tables.\")\n",
@@ -669,9 +700,9 @@
     "        ImportField('EncKPS', final_name='KPS', type='NUMBER') ,   #, conversion_function=None),\n",
     "    ]\n",
     "    import_to_event_table('timeline-encounters', 'Encounters', import_fields, event_type='ENCOUNTERS', start_date_col_name='EncDate', stop_date_col_name='EncDate', graph_marker=graph_marker_types[\"diamonds\"] )\n",
-    "    datafiles_fields['timeline-encounters'] = core_timeline_fields.copy()\n",
-    "    datafiles_fields['timeline-encounters'].extend(import_fields)\n",
-    "\n",
+    "    # datafiles_fields['timeline-encounters'] = core_timeline_fields.copy()\n",
+    "    # datafiles_fields['timeline-encounters'].extend(import_fields)\n",
+    "    add_fields('timeline-encounters', import_fields)\n",
     "\n",
     "    print('datafiles_fields[timeline-encounters]  is....')\n",
     "    print(datafiles_fields['timeline-encounters'] )\n",
@@ -679,25 +710,25 @@
     "    import_fields = [\n",
     "        ImportField('RadTxType', final_name='RadTxType' ) ,   \n",
     "        ImportField('RadTxTarget', final_name='RadTxTarget' ) ,   \n",
-    "        ImportField('RadTxTotalDose', final_name='RadTxTotalDose' ) ,   \n",
+    "        ImportField('RadTxTotalDose', final_name='RadTxTotalDose' ) ,\n",
+    "        ImportField('RADIATION', final_name='RADIATION' ) ,   \n",
     "    ]\n",
     "    import_to_event_table('timeline-radiation', 'Radiation', import_fields, event_type='RADIATION', start_date_col_name='RadTxDate', stop_date_col_name='RadTxStopDate', subtype_source=\"RadTxType\", graph_marker=graph_marker_types[\"arcs\"] )\n",
     "    datafiles_fields['timeline-radiation'] = core_timeline_fields.copy()\n",
     "    datafiles_fields['timeline-radiation'].extend(import_fields)\n",
-    "    datafiles_fields['timeline-radiation'].extend( [ ImportField('RADIATION', final_name='RADIATION') ])\n",
+    "    # datafiles_fields['timeline-radiation'].extend( [ ImportField('RADIATION', final_name='RADIATION') ])\n",
     "    \n",
     "    import_fields = [\n",
-    "        ImportField('RadTxType', final_name='RadTxType' ) ,   \n",
-    "        ImportField('RadTxTarget', final_name='RadTxTarget' ) ,   \n",
-    "        ImportField('RadTxTotalDose', final_name='RadTxTotalDose' ) ,   \n",
+    "        # TBD: Add future fields, like  ImportField('MedDose', final_name='Dose' ) ,   \n",
+    "        ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY') \n",
     "    ]\n",
     "    import_to_event_table('timeline-medicaltherapy', 'Medical Therapy', import_fields, event_type='MEDICALTHERAPY', start_date_col_name='MedTxDate', stop_date_col_name='MedTxStopDate', subtype_source=\"MedTxAgent\" )\n",
     "    datafiles_fields['timeline-medicaltherapy'] = core_timeline_fields.copy()\n",
     "    datafiles_fields['timeline-medicaltherapy'].extend(import_fields)\n",
-    "    datafiles_fields['timeline-medicaltherapy'].extend( [ ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY') ])\n",
     "    \n",
     "    import_fields = [\n",
     "        # ImportField('Status', final_name='Status' ) ,   \n",
+    "        ImportField('STATUS', final_name='STATUS')\n",
     "    ]\n",
     "    import_to_event_table('timeline-status', 'Status', import_fields, event_type='STATUS', start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", safelist=[\n",
     "        '1st Progression',\n",
@@ -716,7 +747,7 @@
     "        ] )\n",
     "    datafiles_fields['timeline-status'] = core_timeline_fields.copy()\n",
     "    datafiles_fields['timeline-status'].extend(import_fields)\n",
-    "    datafiles_fields['timeline-status'].extend( [ ImportField('STATUS', final_name='STATUS') ])\n",
+    "    # datafiles_fields['timeline-status'].extend( [ ImportField('STATUS', final_name='STATUS') ])\n",
     "    \n",
     "\n"
    ]
