import_to_event_table now supprts date_lookup_index and date_lookup_table_with_dates to pull a date from another table (e.g. Procedures)

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -8,15 +8,15 @@
    "source": [
     "# CaisisImport. A utility to prepare a Caisis-to-Excel export for import into Oncoscape (via cBioPortal format).\n",
     "\n",
-    "dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
-    "diseaseChosen = 'Brain'  \n",
-    "study_identifier = 'brain_abc'  #used for copying brain_abc_custom_caisis_prep.py to this folder as custom_caisis_prep.py.\n",
-    "type_of_cancer = \"misc\"  # Use cbioportal term\n",
-    "\n",
-    "# dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   \n",
-    "# diseaseChosen = 'Sarcoma'  #'Brain'\n",
-    "# study_identifier = 'sarcoma_caisis'  \n",
+    "# dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
+    "# diseaseChosen = 'Brain'  \n",
+    "# study_identifier = 'brain_abc'  #used for copying brain_abc_custom_caisis_prep.py to this folder as custom_caisis_prep.py.\n",
     "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
+    "\n",
+    "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   \n",
+    "diseaseChosen = 'Sarcoma'  #'Brain'\n",
+    "study_identifier = 'sarcoma_caisis'  \n",
+    "type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
     "# dataset_folder = '../Caisis_NonPublicData/Liver_nov2021'   \n",
     "# diseaseChosen = 'Liver Cancer'   \n",
@@ -304,7 +304,7 @@
     "        except:\n",
     "            val =\"\"\n",
     "    if ifield.type=='DATE':\n",
-    "        # print(str(ifield.type)+\", val-type=\" + str(type(val)) + \" val=(\"+str(val)+\")\")\n",
+    "        # print(\"DATE-TEST \"+str(ifield.type)+\", val-type=\" + str(type(val)) + \" val=(\"+str(val)+\")\")\n",
     "        if isinstance(val, str):\n",
     "            val = datetime.strptime(val, date_format)\n",
     "            if str(val) == \"NaT\":  # Not a Time\n",
@@ -382,7 +382,12 @@
     "# event_Type is the name of the subtype column (e.g., RADIATION)\n",
     "# subtype_source is the CSV column with the  source info for the subtype (e.g., RADTXTYPE)\n",
     "# safelist, if not None, is the *only* values acceptable for subtype.\n",
-    "def import_to_event_table(event_table_name, tname, import_fields:List[ImportField], event_type=\"EVENT\", start_date_col_name=None, stop_date_col_name=None, subtype_source=None, graph_marker=None, safelist=None): \n",
+    "# date_lookup_index and date_lookup_table_with_dates are used to look up a date in another table (e.g. in Procedures, based on ProccedureId in first table)\n",
+    "\n",
+    "def import_to_event_table(event_table_name, tname, import_fields:List[ImportField], event_type=\"EVENT\", \n",
+    "    start_date_col_name=None, stop_date_col_name=None, subtype_source=None, graph_marker=None, safelist=None,\n",
+    "    date_lookup_index=None, date_lookup_table_with_dates=None):\n",
+    "\n",
     "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list, has_custom_prep_file\n",
     "    print(\"INFO starting to import for event_type of....\")\n",
     "    print(str(event_type))\n",
@@ -446,23 +451,57 @@
     "                etype = event_type\n",
     "\n",
     "            # common to all events: pid, type, start, and stop.\n",
-    "            pid = row['PatientId']\n",
+    "            pid = str(row['PatientId'])\n",
     "            \n",
+    "            # ======== Get start and stop dates =======\n",
     "            start_date = missing_date\n",
     "            if start_date_col_name != None:\n",
+    "                if date_lookup_index is not None:   # might be a date lookup, like pathology from procedures\n",
+    "                    # e.g., table_with_dates=\"Procedures\", date_lookup_table_with_dates=\"ProcedureId\"\n",
+    "                    table_with_dates = loaded_tables_dict[date_lookup_table_with_dates]\n",
+    "                    date_lookup_index_key = row[date_lookup_index]  #e.g. ProcedureId of 1234\n",
+    "                    if (date_lookup_index_key is None) | (str(date_lookup_index_key) =='') | (str(date_lookup_index_key) =='nan') :\n",
+    "                        print(\"ERROR: missing date_lookup_index_key where pid=\"+pid)\n",
+    "                    else:\n",
+    "                        gg = table_with_dates.loc[table_with_dates[date_lookup_index] == date_lookup_index_key]\n",
+    "                        if gg.empty:\n",
+    "                            print(\"empty dataframe for pid '\"+pid+\"'.\")\n",
+    "                        else:\n",
+    "                            hh = str(gg.iloc[0][start_date_col_name])\n",
+    "                            if hh != 'nan':\n",
+    "                                start_date = hh            \n",
+    "                else:\n",
     "                    start_date = row[start_date_col_name]\n",
+    "\n",
     "            stop_date = missing_date\n",
     "            if stop_date_col_name != None:\n",
-    "                stop_date = row[stop_date_col_name]\n",
+    "                if date_lookup_index is not None:   # might be a date lookup, like pathology from procedures\n",
+    "                    table_with_dates = loaded_tables_dict[date_lookup_table_with_dates]\n",
+    "                    date_lookup_index_key = row[date_lookup_index]  #e.g. ProcedureId of 1234\n",
+    "                    if (date_lookup_index_key is None) | (str(date_lookup_index_key) =='') | (str(date_lookup_index_key) =='nan') :\n",
+    "                        print(\"ERROR: missing date_lookup_index_key where pid=\"+pid)\n",
+    "                    else:\n",
+    "                        gg = table_with_dates.loc[table_with_dates[date_lookup_index] == date_lookup_index_key]\n",
+    "                        if gg.empty:\n",
+    "                            print(\"empty dataframe for pid '\"+pid+\"'.\")\n",
+    "                        else:\n",
+    "                            hh = str(gg.iloc[0][stop_date_col_name])\n",
+    "                            if hh != 'nan':\n",
+    "                                stop_date = hh             \n",
     "\n",
-    "            # print('pid='+pid+', etype='+etype+', start='+str(start_date)+',  stop='+str(stop_date)+'.')\n",
+    "                else:\n",
+    "                    stop_date = row[stop_date_col_name]\n",
+    "\n",
+    "\n",
+    "            #print('pid='+pid+', etype='+etype+', start='+str(start_date)+',  stop='+str(stop_date)+'.')\n",
     "            \n",
     "            new_row = [pid, \n",
     "                process_val(etype, core_timeline_fields[0]), \n",
     "                process_val(start_date, core_timeline_fields[1]), \n",
     "                process_val(stop_date, core_timeline_fields[2]), \n",
     "                ]\n",
-    "\n",
+    "            #print(\"new_row= \" +str(new_row))\n",
+    "            \n",
     "            # print(\"columns....\")\n",
     "            # print(*current_table.columns, sep = \", \") \n",
     "            if \"EncECOG_Score\" in current_table.columns:\n",
@@ -489,12 +528,16 @@
     "                            pass\n",
     "\n",
     "                    except:\n",
-    "                        print(\"ERROR fiif  \"+current_lookup_field+\", \"+str(pid)+\"   \"+str(val)+\".\")\n",
+    "                        print(\"ERROR fiif  \"+current_lookup_field+\", \"+pid+\"   \"+str(val)+\".\")\n",
     "                        typef, value, traceback = sys.exc_info()\n",
     "                        print('Error value '+ str (value))\n",
     "                        pass\n",
     "\n",
     "                    new_row.append(val)\n",
+    "                else: \n",
+    "                    pass    \n",
+    "                    # TBD: log that we can't find the field\n",
+    "\n",
     "            # print(\"new_row....\")\n",
     "            # print(*new_row, sep = \", \")\n",
     "\n",
@@ -613,16 +656,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_clinical_patient\n",
-    "global_gg\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def import_fields_to_patient_table():\n",
     "    # This is the core of specifying which fields we want to import. May change between datasets, so consider moving to an external file.\n",
     "    \n",
@@ -694,61 +727,64 @@
     "\n",
     "    # This is the core of specifying which fields we want to import. May change between datasets, so consider moving to an external file.\n",
     "\n",
-    "    print(\"\\nSTEP 4: Import to events tables.\")\n",
-    "    import_fields = [\n",
-    "        ImportField('EncECOG_Score', final_name='ECOG', type='NUMBER') ,   #, conversion_function=None),\n",
-    "        ImportField('EncKPS', final_name='KPS', type='NUMBER') ,   #, conversion_function=None),\n",
-    "    ]\n",
-    "    import_to_event_table('timeline-encounters', 'Encounters', import_fields, event_type='ENCOUNTERS', start_date_col_name='EncDate', stop_date_col_name='EncDate', graph_marker=graph_marker_types[\"diamonds\"] )\n",
-    "    # datafiles_fields['timeline-encounters'] = core_timeline_fields.copy()\n",
-    "    # datafiles_fields['timeline-encounters'].extend(import_fields)\n",
-    "    add_fields('timeline-encounters', import_fields)\n",
+    "    # print(\"\\nSTEP 4: Import to events tables.\")\n",
+    "    # import_fields = [\n",
+    "    #     ImportField('EncECOG_Score', final_name='ECOG', type='NUMBER') ,   #, conversion_function=None),\n",
+    "    #     ImportField('EncKPS', final_name='KPS', type='NUMBER') ,   #, conversion_function=None),\n",
+    "    # ]\n",
+    "    # import_to_event_table('timeline-encounters', 'Encounters', import_fields, event_type='ENCOUNTERS', start_date_col_name='EncDate', stop_date_col_name='EncDate', graph_marker=graph_marker_types[\"diamonds\"] )\n",
+    "    # add_fields('timeline-encounters', import_fields)\n",
     "\n",
-    "    print('datafiles_fields[timeline-encounters]  is....')\n",
-    "    print(datafiles_fields['timeline-encounters'] )\n",
+    "    # import_fields = [\n",
+    "    #     ImportField('RadTxType', final_name='RadTxType' ) ,   \n",
+    "    #     ImportField('RadTxTarget', final_name='RadTxTarget' ) ,   \n",
+    "    #     ImportField('RadTxTotalDose', final_name='RadTxTotalDose' ) ,\n",
+    "    #     ImportField('RADIATION', final_name='RADIATION' ) ,   \n",
+    "    # ]\n",
+    "    # import_to_event_table('timeline-radiation', 'Radiation', import_fields, event_type='RADIATION', start_date_col_name='RadTxDate', stop_date_col_name='RadTxStopDate', subtype_source=\"RadTxType\", graph_marker=graph_marker_types[\"arcs\"] )\n",
+    "    # add_fields('timeline-radiation', import_fields)\n",
     "\n",
-    "    import_fields = [\n",
-    "        ImportField('RadTxType', final_name='RadTxType' ) ,   \n",
-    "        ImportField('RadTxTarget', final_name='RadTxTarget' ) ,   \n",
-    "        ImportField('RadTxTotalDose', final_name='RadTxTotalDose' ) ,\n",
-    "        ImportField('RADIATION', final_name='RADIATION' ) ,   \n",
-    "    ]\n",
-    "    import_to_event_table('timeline-radiation', 'Radiation', import_fields, event_type='RADIATION', start_date_col_name='RadTxDate', stop_date_col_name='RadTxStopDate', subtype_source=\"RadTxType\", graph_marker=graph_marker_types[\"arcs\"] )\n",
-    "    datafiles_fields['timeline-radiation'] = core_timeline_fields.copy()\n",
-    "    datafiles_fields['timeline-radiation'].extend(import_fields)\n",
-    "    # datafiles_fields['timeline-radiation'].extend( [ ImportField('RADIATION', final_name='RADIATION') ])\n",
+    "    # import_fields = [\n",
+    "    #     # TBD: Add future fields, like  ImportField('MedDose', final_name='Dose' ) ,   \n",
+    "    #     ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY') \n",
+    "    # ]\n",
+    "    # import_to_event_table('timeline-medicaltherapy', 'Medical Therapy', import_fields, event_type='MEDICALTHERAPY', start_date_col_name='MedTxDate', stop_date_col_name='MedTxStopDate', subtype_source=\"MedTxAgent\" )\n",
+    "    # add_fields('timeline-medicaltherapy', import_fields)\n",
+    "\n",
+    "    # import_fields = [\n",
+    "    #     ImportField('STATUS', final_name='STATUS')\n",
+    "    # ]\n",
+    "    # import_to_event_table('timeline-status', 'Status', import_fields, event_type='STATUS', start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", safelist=[\n",
+    "    #     '1st Progression',\n",
+    "    #     '2nd Progression',\n",
+    "    #     '3rd Progression',\n",
+    "    #     'Last Status Check',\n",
+    "    #     'Recurrence',\n",
+    "    #     'Last Status Check',\n",
+    "    #     'Local Recurrence',\n",
+    "    #     'Locoregional',\n",
+    "    #     'Metastatic Disease',\n",
+    "    #     'New Diagnosis',\n",
+    "    #     'Newly Diagnosed',\n",
+    "    #     'No Evidence of Disease',\n",
+    "\n",
+    "    #     ] )\n",
+    "    # add_fields('timeline-status', import_fields)\n",
     "    \n",
     "    import_fields = [\n",
-    "        # TBD: Add future fields, like  ImportField('MedDose', final_name='Dose' ) ,   \n",
-    "        ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY') \n",
+    "        ImportField('PathHistology', final_name='Histology' ) ,   \n",
+    "        ImportField('PathStageT', final_name='StageT' ) ,   \n",
+    "        ImportField('PathStageN', final_name='StageN' ) ,   \n",
+    "        ImportField('PathStageM', final_name='StageM' ) ,   \n",
+    "        ImportField('PathGrade', final_name='Grade' ) ,   \n",
+    "        ImportField('PATHOLOGY', final_name='PATHOLOGY') \n",
     "    ]\n",
-    "    import_to_event_table('timeline-medicaltherapy', 'Medical Therapy', import_fields, event_type='MEDICALTHERAPY', start_date_col_name='MedTxDate', stop_date_col_name='MedTxStopDate', subtype_source=\"MedTxAgent\" )\n",
-    "    datafiles_fields['timeline-medicaltherapy'] = core_timeline_fields.copy()\n",
-    "    datafiles_fields['timeline-medicaltherapy'].extend(import_fields)\n",
-    "    \n",
-    "    import_fields = [\n",
-    "        # ImportField('Status', final_name='Status' ) ,   \n",
-    "        ImportField('STATUS', final_name='STATUS')\n",
-    "    ]\n",
-    "    import_to_event_table('timeline-status', 'Status', import_fields, event_type='STATUS', start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", safelist=[\n",
-    "        '1st Progression',\n",
-    "        '2nd Progression',\n",
-    "        '3rd Progression',\n",
-    "        'Last Status Check',\n",
-    "        'Recurrence',\n",
-    "        'Last Status Check',\n",
-    "        'Local Recurrence',\n",
-    "        'Locoregional',\n",
-    "        'Metastatic Disease',\n",
-    "        'New Diagnosis',\n",
-    "        'Newly Diagnosed',\n",
-    "        'No Evidence of Disease',\n",
+    "    import_to_event_table('timeline-pathology', 'Pathology', import_fields, \n",
+    "        event_type='PATHOLOGY', start_date_col_name='ProcDate', stop_date_col_name='ProcDate', subtype_source=\"PathHistology\", graph_marker=graph_marker_types[\"triangles\"],\n",
+    "        date_lookup_index=\"ProcedureId\", date_lookup_table_with_dates=\"Procedures\"\n",
+    "         )\n",
+    "    add_fields('timeline-pathology', import_fields)\n",
     "\n",
-    "        ] )\n",
-    "    datafiles_fields['timeline-status'] = core_timeline_fields.copy()\n",
-    "    datafiles_fields['timeline-status'].extend(import_fields)\n",
-    "    # datafiles_fields['timeline-status'].extend( [ ImportField('STATUS', final_name='STATUS') ])\n",
-    "    \n",
     "\n"
    ]
   },
