--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -8,15 +8,15 @@
    "source": [
     "# CaisisImport. A utility to prepare a Caisis-to-Excel export for import into Oncoscape (via cBioPortal format).\n",
     "\n",
-    "# dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
-    "# diseaseChosen = 'Brain'  \n",
-    "# study_identifier = 'brain_abc'  #used for copying brain_abc_custom_caisis_prep.py to this folder as custom_caisis_prep.py.\n",
-    "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
-    "\n",
-    "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   \n",
-    "diseaseChosen = 'Sarcoma'  #'Brain'\n",
-    "study_identifier = 'sarcoma_caisis'  \n",
+    "dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
+    "diseaseChosen = 'Brain'  \n",
+    "study_identifier = 'brain_abc'  #used for copying brain_abc_custom_caisis_prep.py to this folder as custom_caisis_prep.py.\n",
     "type_of_cancer = \"misc\"  # Use cbioportal term\n",
+    "\n",
+    "# dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   \n",
+    "# diseaseChosen = 'Sarcoma'  #'Brain'\n",
+    "# study_identifier = 'sarcoma_caisis'  \n",
+    "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
     "# dataset_folder = '../Caisis_NonPublicData/Liver_nov2021'   \n",
     "# diseaseChosen = 'Liver Cancer'   \n",
@@ -209,7 +209,7 @@
     "    if not os.path.exists(status_fullpath):\n",
     "        sys.exit('ERROR: Status.csv file not found at ' + status_fullpath)\n",
     "\n",
-    "    tbl_status = pd.read_csv(status_fullpath) #'Demographics.csv')\n",
+    "    tbl_status = pd.read_csv(status_fullpath) \n",
     "    tbl_status['Date'] =pd.to_datetime(tbl_status.StatusDate)\n",
     "    tbl_status['PatientId'] =  tbl_status['PatientId'].astype(str)\n",
     "\n",
@@ -231,13 +231,14 @@
     "            \n",
     "    diseaseDatedRows = diseaseRows[diseaseRows.Date.isna()==False]\n",
     "    patientid_date_dict = {}\n",
+    "    patientid_probability_dict = {}\n",
     "    print(\"===START PATIENT LOOP===\")\n",
     "    for index, row in diseaseDatedRows.iterrows():\n",
     "        pid = str(row['PatientId'])\n",
     "        if((pid in patientid_date_dict) == False):\n",
     "            justYMD = row['Date']  #datetime.strftime(row['Date'], \"%Y-%m-%d\")\n",
     "            patientid_date_dict[pid] = justYMD\n",
-    "            \n",
+    "            patientid_probability_dict[pid] = row['StatusProbability']\n",
     "        else:\n",
     "            pass\n",
     "    print(\"===END PATIENT LOOP===\")\n",
@@ -246,9 +247,9 @@
     "\n",
     "    data = []\n",
     "    for key in patientid_date_dict.keys():\n",
-    "        new_row = [key, patientid_date_dict[key]]\n",
+    "        new_row = [key, patientid_date_dict[key], patientid_probability_dict[key]]\n",
     "        data.append(new_row)\n",
-    "    patients_first_dx = pd.DataFrame(data, columns=[\"PatientId\", \"DiagnosisDate\"])\n",
+    "    patients_first_dx = pd.DataFrame(data, columns=[\"PatientId\", \"DiagnosisDate\", \"StatusProbability\"])\n",
     "    data_clinical_patient = patients_first_dx.copy()\n",
     "\n",
     "    report_body = patients_and_descriptive_header(patients_first_dx, 'Patients First Diagnosis Date')\n",
@@ -461,7 +462,7 @@
     "                    table_with_dates = loaded_tables_dict[date_lookup_table_with_dates]\n",
     "                    date_lookup_index_key = row[date_lookup_index]  #e.g. ProcedureId of 1234\n",
     "                    if (date_lookup_index_key is None) | (str(date_lookup_index_key) =='') | (str(date_lookup_index_key) =='nan') :\n",
-    "                        print(\"ERROR: missing date_lookup_index_key where pid=\"+pid)\n",
+    "                        print(\"ERROR: START_DATE missing date_lookup_index_key where pid=\"+pid)\n",
     "                    else:\n",
     "                        gg = table_with_dates.loc[table_with_dates[date_lookup_index] == date_lookup_index_key]\n",
     "                        if gg.empty:\n",
@@ -479,7 +480,7 @@
     "                    table_with_dates = loaded_tables_dict[date_lookup_table_with_dates]\n",
     "                    date_lookup_index_key = row[date_lookup_index]  #e.g. ProcedureId of 1234\n",
     "                    if (date_lookup_index_key is None) | (str(date_lookup_index_key) =='') | (str(date_lookup_index_key) =='nan') :\n",
-    "                        print(\"ERROR: missing date_lookup_index_key where pid=\"+pid)\n",
+    "                        print(\"ERROR: STOP_DATE missing date_lookup_index_key where pid=\"+pid)\n",
     "                    else:\n",
     "                        gg = table_with_dates.loc[table_with_dates[date_lookup_index] == date_lookup_index_key]\n",
     "                        if gg.empty:\n",
@@ -727,52 +728,52 @@
     "\n",
     "    # This is the core of specifying which fields we want to import. May change between datasets, so consider moving to an external file.\n",
     "\n",
-    "    # print(\"\\nSTEP 4: Import to events tables.\")\n",
-    "    # import_fields = [\n",
-    "    #     ImportField('EncECOG_Score', final_name='ECOG', type='NUMBER') ,   #, conversion_function=None),\n",
-    "    #     ImportField('EncKPS', final_name='KPS', type='NUMBER') ,   #, conversion_function=None),\n",
-    "    # ]\n",
-    "    # import_to_event_table('timeline-encounters', 'Encounters', import_fields, event_type='ENCOUNTERS', start_date_col_name='EncDate', stop_date_col_name='EncDate', graph_marker=graph_marker_types[\"diamonds\"] )\n",
-    "    # add_fields('timeline-encounters', import_fields)\n",
+    "    print(\"\\nSTEP 4: Import to events tables.\")\n",
+    "    import_fields = [\n",
+    "        ImportField('EncECOG_Score', final_name='ECOG', type='NUMBER') ,   #, conversion_function=None),\n",
+    "        ImportField('EncKPS', final_name='KPS', type='NUMBER') ,   #, conversion_function=None),\n",
+    "    ]\n",
+    "    import_to_event_table('timeline-encounters', 'Encounters', import_fields, event_type='ENCOUNTERS', start_date_col_name='EncDate', stop_date_col_name='EncDate', graph_marker=graph_marker_types[\"diamonds\"] )\n",
+    "    add_fields('timeline-encounters', import_fields)\n",
     "\n",
-    "    # import_fields = [\n",
-    "    #     ImportField('RadTxType', final_name='RadTxType' ) ,   \n",
-    "    #     ImportField('RadTxTarget', final_name='RadTxTarget' ) ,   \n",
-    "    #     ImportField('RadTxTotalDose', final_name='RadTxTotalDose' ) ,\n",
-    "    #     ImportField('RADIATION', final_name='RADIATION' ) ,   \n",
-    "    # ]\n",
-    "    # import_to_event_table('timeline-radiation', 'Radiation', import_fields, event_type='RADIATION', start_date_col_name='RadTxDate', stop_date_col_name='RadTxStopDate', subtype_source=\"RadTxType\", graph_marker=graph_marker_types[\"arcs\"] )\n",
-    "    # add_fields('timeline-radiation', import_fields)\n",
+    "    import_fields = [\n",
+    "        ImportField('RadTxType', final_name='RadTxType' ) ,   \n",
+    "        ImportField('RadTxTarget', final_name='RadTxTarget' ) ,   \n",
+    "        ImportField('RadTxTotalDose', final_name='RadTxTotalDose' ) ,\n",
+    "        ImportField('RADIATION', final_name='RADIATION' ) ,   \n",
+    "    ]\n",
+    "    import_to_event_table('timeline-radiation', 'Radiation', import_fields, event_type='RADIATION', start_date_col_name='RadTxDate', stop_date_col_name='RadTxStopDate', subtype_source=\"RadTxType\", graph_marker=graph_marker_types[\"arcs\"] )\n",
+    "    add_fields('timeline-radiation', import_fields)\n",
     "\n",
-    "    # import_fields = [\n",
-    "    #     # TBD: Add future fields, like  ImportField('MedDose', final_name='Dose' ) ,   \n",
-    "    #     ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY') \n",
-    "    # ]\n",
-    "    # import_to_event_table('timeline-medicaltherapy', 'Medical Therapy', import_fields, event_type='MEDICALTHERAPY', start_date_col_name='MedTxDate', stop_date_col_name='MedTxStopDate', subtype_source=\"MedTxAgent\" )\n",
-    "    # add_fields('timeline-medicaltherapy', import_fields)\n",
+    "    import_fields = [\n",
+    "        # TBD: Add future fields, like  ImportField('MedDose', final_name='Dose' ) ,   \n",
+    "        ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY') \n",
+    "    ]\n",
+    "    import_to_event_table('timeline-medicaltherapy', 'Medical Therapy', import_fields, event_type='MEDICALTHERAPY', start_date_col_name='MedTxDate', stop_date_col_name='MedTxStopDate', subtype_source=\"MedTxAgent\" )\n",
+    "    add_fields('timeline-medicaltherapy', import_fields)\n",
     "\n",
-    "    # import_fields = [\n",
-    "    #     ImportField('STATUS', final_name='STATUS')\n",
-    "    # ]\n",
-    "    # import_to_event_table('timeline-status', 'Status', import_fields, event_type='STATUS', start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", safelist=[\n",
-    "    #     '1st Progression',\n",
-    "    #     '2nd Progression',\n",
-    "    #     '3rd Progression',\n",
-    "    #     'Last Status Check',\n",
-    "    #     'Recurrence',\n",
-    "    #     'Last Status Check',\n",
-    "    #     'Local Recurrence',\n",
-    "    #     'Locoregional',\n",
-    "    #     'Metastatic Disease',\n",
-    "    #     'New Diagnosis',\n",
-    "    #     'Newly Diagnosed',\n",
-    "    #     'No Evidence of Disease',\n",
+    "    import_fields = [\n",
+    "        ImportField('STATUS', final_name='STATUS')\n",
+    "    ]\n",
+    "    import_to_event_table('timeline-status', 'Status', import_fields, event_type='STATUS', start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", safelist=[\n",
+    "        '1st Progression',\n",
+    "        '2nd Progression',\n",
+    "        '3rd Progression',\n",
+    "        'Last Status Check',\n",
+    "        'Recurrence',\n",
+    "        'Local Recurrence',\n",
+    "        'Locoregional',\n",
+    "        'Metastatic Disease',\n",
+    "        'New Diagnosis',\n",
+    "        'Newly Diagnosed',\n",
+    "        'No Evidence of Disease',\n",
     "\n",
-    "    #     ] )\n",
-    "    # add_fields('timeline-status', import_fields)\n",
+    "        ] )\n",
+    "    add_fields('timeline-status', import_fields)\n",
     "    \n",
     "    import_fields = [\n",
     "        ImportField('PathHistology', final_name='Histology' ) ,   \n",
+    "        ImportField('PathSpecimenType', final_name='SampleType' ) ,   \n",
     "        ImportField('PathStageT', final_name='StageT' ) ,   \n",
     "        ImportField('PathStageN', final_name='StageN' ) ,   \n",
     "        ImportField('PathStageM', final_name='StageM' ) ,   \n",
